--- a/style.css
+++ b/style.css
@@ -635,6 +635,9 @@ filter: brightness(50%);
     text-align: center;
     color: #e3e3e3;
     background-color: #131314;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .contributors h2{
@@ -649,6 +652,7 @@ filter: brightness(50%);
     margin-top: 1.2rem;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     width: 70%;
 }
 
