--- a/style.css
+++ b/style.css
@@ -4,6 +4,20 @@ html {
     scroll-behavior: smooth;
 }
 
+*::-webkit-scrollbar {
+    width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #2c2d2e; 
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #555; 
+    border-radius: 10px; 
+    border: 3px solid #2c2d2e;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -436,6 +450,7 @@ header .info-text .scroll::before {
     border-radius: 8px;
     width: 300px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    height: 40rem;
 }
 
 .form-container h2 {
@@ -616,6 +631,110 @@ filter: brightness(50%);
     margin-bottom: 1rem;
 }
 
+.stats-viewer-container {
+    background-color: #131314;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.stats-viewer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 80%;
+}
+
+.player-list {
+    width: 250px;
+    background-color: #1e1f22;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    color: #e3e3e3;
+    height: 40rem;
+}
+
+.player-list input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #2c2d2e;
+    color: #e3e3e3;
+}
+
+.scrollable {
+    max-height: 600px;
+    overflow-y: auto;
+}
+
+.player-div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #2c2d2e;
+    border-radius: 4px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: background-color 0.25s ease;
+}
+
+.player-div:hover {
+    background-color: #3c3d3e;
+}
+
+.player-icon {
+    margin-right: 10px;
+    fill: #e3e3e3;
+}
+
+.player-div h4 {
+    margin-left: 15px;
+    color: #e3e3e3;
+}
+
+.player-stats {
+    display: none;
+    padding: 20px;
+    background-color: #1e1f22;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    color: #e3e3e3;
+    height: auto;
+    min-height: 40rem;
+    width: 25rem;
+    transition: .5s ease;
+}
+
+.stats-header {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Space between the image and the heading */
+    justify-content: center;
+}
+
+.stats-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    gap: 50px;
+}
+
+.stats-container span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .top-1 {
     padding: 75px;
     background-color: #131314;
@@ -671,6 +790,12 @@ filter: brightness(50%);
 
 .icons:hover {
     filter: brightness(50%);
+}
+
+.player-flag {
+    width: 20px;
+    height: auto;
+    vertical-align: middle;
 }
 
 .flag {
