--- a/style.css
+++ b/style.css
@@ -636,6 +636,7 @@ filter: brightness(50%);
     display: flex;
     justify-content: center;
     width: 100%;
+    text-align:center;
 }
 
 .stats-viewer {
