--- a/public/style.css
+++ b/public/style.css
@@ -532,6 +532,11 @@ header .info-text .scroll::before {
     filter: blur(3px) brightness(50%);
     z-index: 0;
     opacity: 1;
+    transition: .25s ease;
+}
+
+#features .card:hover .background-blur {
+    transform: scale(1.5);
 }
 
 .background-blur::after {
