--- a/public/style.css
+++ b/public/style.css
@@ -871,7 +871,24 @@ header .info-text .scroll::before {
 }
 
 #cancel-btn:hover {
-    background-color: #e2e6ea; /* Slightly darker gray on hover */
+    background-color: #b4b8bb; /* Slightly darker gray on hover */
+}
+
+#add-btn {
+    margin: 10px;
+    background-color: #285fa7; /* Green background */
+    color: white; /* White text */
+    padding: 10px 20px; /* Padding for size */
+    border: none; /* Remove border */
+    border-radius: 5px; /* Rounded corners */
+    cursor: pointer; /* Pointer cursor on hover */
+    font-size: 16px; /* Font size */
+    font-weight: bold; /* Bold text */
+    transition: .25s ease;
+}
+
+#add-btn:hover {
+    background-color: #235392;
 }
 
 #json-editor {
