--- a/public/style.css
+++ b/public/style.css
@@ -1035,6 +1035,16 @@ header .info-text .scroll::before {
         font-size: 1.1rem;
     }
 
+    .editor-main {
+        flex-direction: column;
+        align-items: center;
+        height: 60%;
+    }
+
+    #draggable-list, .property-panel {
+        width: 100%;
+    }
+
     header .info-text span {
         font-size: 2rem;
         font-weight: 500;
