--- a/public/style.css
+++ b/public/style.css
@@ -834,6 +834,14 @@ header .info-text .scroll::before {
     border-radius: 4px;
 }
 
+.property-panel button {
+    margin: 5px;
+    padding: 5px 5px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
 .btn-container {
     width: 70%;
     display: flex;
