--- a/public/style.css
+++ b/public/style.css
@@ -836,10 +836,11 @@ header .info-text .scroll::before {
 
 .property-panel button {
     margin: 5px;
-    padding: 5px 5px;
+    padding: 10px 10px;
     border-radius: 5px;
     border: none;
     cursor: pointer;
+    font-weight: bold;
 }
 
 .btn-container {
