--- a/public/style.css
+++ b/public/style.css
@@ -96,6 +96,7 @@ footer {
 }
 
 footer p {
+    text-align: center;
     font-weight: bold;
 }
 
@@ -844,10 +845,9 @@ header .info-text .scroll::before {
 }
 
 .btn-container {
-    width: 70%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    
 }
 
 #save-btn {
