--- a/public/style.css
+++ b/public/style.css
@@ -421,14 +421,17 @@ header .info-text .scroll::before {
 }
 
 @keyframes pulse {
+
     0%,
     100% {
         opacity: 0;
     }
+
     15%,
     45% {
         opacity: 1;
     }
+
     60% {
         box-shadow: 0 0 0 30px rgba(255, 255, 255, 0.1);
         opacity: 0;
@@ -547,25 +550,27 @@ header .info-text .scroll::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(
-        45deg,
-        rgba(255, 255, 255, 1) 25%,
-        transparent 25%,
-        transparent 50%,
-        rgba(255, 255, 255, 1) 50%,
-        rgba(255, 255, 255, 1) 75%,
-        transparent 75%,
-        transparent
-    );
-    background-size: 10px 10px; /* Increase the size of the lines */
-    opacity: 1; /* Increase the opacity of the lines */
+    background-image: linear-gradient(45deg,
+            rgba(255, 255, 255, 1) 25%,
+            transparent 25%,
+            transparent 50%,
+            rgba(255, 255, 255, 1) 50%,
+            rgba(255, 255, 255, 1) 75%,
+            transparent 75%,
+            transparent);
+    background-size: 10px 10px;
+    /* Increase the size of the lines */
+    opacity: 1;
+    /* Increase the opacity of the lines */
     z-index: 1;
 }
 
 .card .info {
     position: relative;
-    z-index: 1; /* Ensure content is above the background */
-    background: transparent; /* Transparent background to show blurred image behind */
+    z-index: 1;
+    /* Ensure content is above the background */
+    background: transparent;
+    /* Transparent background to show blurred image behind */
     border-radius: 20px;
 }
 
@@ -740,7 +745,8 @@ header .info-text .scroll::before {
 .stats-header {
     display: flex;
     align-items: center;
-    gap: 10px; /* Space between the image and the heading */
+    gap: 10px;
+    /* Space between the image and the heading */
     justify-content: center;
 }
 
@@ -852,47 +858,72 @@ header .info-text .scroll::before {
 
 #save-btn {
     margin: 10px;
-    background-color: #28a745; /* Green background */
-    color: white; /* White text */
-    padding: 10px 20px; /* Padding for size */
-    border: none; /* Remove border */
-    border-radius: 5px; /* Rounded corners */
-    cursor: pointer; /* Pointer cursor on hover */
-    font-size: 16px; /* Font size */
-    font-weight: bold; /* Bold text */
+    background-color: #28a745;
+    /* Green background */
+    color: white;
+    /* White text */
+    padding: 10px 20px;
+    /* Padding for size */
+    border: none;
+    /* Remove border */
+    border-radius: 5px;
+    /* Rounded corners */
+    cursor: pointer;
+    /* Pointer cursor on hover */
+    font-size: 16px;
+    /* Font size */
+    font-weight: bold;
+    /* Bold text */
     transition: .25s ease;
 }
 
 #save-btn:hover {
-    background-color: #218838; /* Darker green on hover */
+    background-color: #218838;
+    /* Darker green on hover */
 }
 
 #cancel-btn {
     margin: 10px;
-    background-color: #f8f9fa; /* Light gray background */
-    color: #343a40; /* Dark gray text */
-    padding: 10px 20px; /* Padding for size */
-    border: 1px solid #ced4da; /* Light gray border */
-    border-radius: 5px; /* Rounded corners */
-    cursor: pointer; /* Pointer cursor on hover */
-    font-size: 16px; /* Font size */
+    background-color: #f8f9fa;
+    /* Light gray background */
+    color: #343a40;
+    /* Dark gray text */
+    padding: 10px 20px;
+    /* Padding for size */
+    border: 1px solid #ced4da;
+    /* Light gray border */
+    border-radius: 5px;
+    /* Rounded corners */
+    cursor: pointer;
+    /* Pointer cursor on hover */
+    font-size: 16px;
+    /* Font size */
     transition: .25s ease;
 }
 
 #cancel-btn:hover {
-    background-color: #b4b8bb; /* Slightly darker gray on hover */
+    background-color: #b4b8bb;
+    /* Slightly darker gray on hover */
 }
 
 #add-btn {
     margin: 10px;
-    background-color: #285fa7; /* Green background */
-    color: white; /* White text */
-    padding: 10px 20px; /* Padding for size */
-    border: none; /* Remove border */
-    border-radius: 5px; /* Rounded corners */
-    cursor: pointer; /* Pointer cursor on hover */
-    font-size: 16px; /* Font size */
-    font-weight: bold; /* Bold text */
+    background-color: #285fa7;
+    /* Green background */
+    color: white;
+    /* White text */
+    padding: 10px 20px;
+    /* Padding for size */
+    border: none;
+    /* Remove border */
+    border-radius: 5px;
+    /* Rounded corners */
+    cursor: pointer;
+    /* Pointer cursor on hover */
+    font-size: 16px;
+    /* Font size */
+    font-weight: bold;
+    /* Bold text */
     transition: .25s ease;
 }
 
@@ -926,6 +957,37 @@ header .info-text .scroll::before {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.marquee {
+    position: relative;
+    width: 100vw;
+    display:flex;
+    align-items: center;
+    max-width: 100%;
+    height: 6rem;
+    overflow-x: hidden;
+    color : #131314;
+    background-color: #e3e3e3;
+    font-size: 2.5rem;
+}
+
+.track {
+    position: absolute;
+    white-space: nowrap;
+    will-change: transform;
+    font-weight: bold;
+    animation: marquee 32s linear infinite;
+}
+
+@keyframes marquee {
+    from {
+        transform: translateX(0);
+    }
+
+    to {
+        transform: translateX(-50%);
+    }
 }
 
 .contributors h2 {
@@ -1079,12 +1141,19 @@ header .info-text .scroll::before {
     #features .card:hover,
     .icons:hover,
     #features .feature-cards .card .info a:hover::after {
-        transition: none; /* Disable transition */
-        background-color: inherit !important; /* Reset background color */
-        opacity: 1 !important; /* Reset opacity */
-        filter: brightness(100%) !important; /* Reset brightness filter */
-        border-color: initial !important; /* Reset border color */
-        box-shadow: initial !important; /* Reset box shadow */
-        transform: initial !important; /* Reset transform */
+        transition: none;
+        /* Disable transition */
+        background-color: inherit !important;
+        /* Reset background color */
+        opacity: 1 !important;
+        /* Reset opacity */
+        filter: brightness(100%) !important;
+        /* Reset brightness filter */
+        border-color: initial !important;
+        /* Reset border color */
+        box-shadow: initial !important;
+        /* Reset box shadow */
+        transform: initial !important;
+        /* Reset transform */
     }
 }
