--- a/public/style.css
+++ b/public/style.css
@@ -963,12 +963,12 @@ header .info-text .scroll::before {
 .marquee {
     position: relative;
     width: 100vw;
-    display:flex;
+    display: flex;
     align-items: center;
     max-width: 100%;
     height: 6rem;
-    overflow-x: hidden;
-    color : #131314;
+    overflow: hidden;
+    color: #131314;
     background-color: #e3e3e3;
     font-size: 2.5rem;
     font-weight: bold;
@@ -977,15 +977,15 @@ header .info-text .scroll::before {
 .content {
     display: inline-block;
     white-space: nowrap; /* Prevents line breaks */
-    animation: marquee 15s linear infinite; /* Adjust timing as needed */
+    animation: marquee 25s linear infinite; /* Adjust timing as needed */
 }
 
 @keyframes marquee {
     0% {
-        transform: translateX(100%); /* Start from right */
+        transform: translateX(0); /* Start position */
     }
     100% {
-        transform: translateX(-100%); /* Move to left */
+        transform: translateX(-50%); /* Move left to cover half of the content */
     }
 }
 
