--- a/public/layout/footer.html
+++ b/public/layout/footer.html
@@ -69,7 +69,7 @@
         dropdownContent.classList.toggle("show");
     }
 
-    const loader = document.querySelector(".loader");
+    const loader = document.getElementsByClassName("loader");
 
     const startTransition = () => {
         loader.style.transform = "translateX(100%)";
