--- a/public/layout/header.html
+++ b/public/layout/header.html
@@ -12,7 +12,7 @@
                 </a>
             </div>
             <div class="dropdown">
-                <button class="dropbtn" onclick="toggleDropdown()">
+                <button class="dropbtn" id="dropbutton">
                     <img src="assets/country.svg" class="flag-icon" />
                     <h3 class="nav-title">Universal List</h3>
                 </button>
