--- a/public/layout/header.html
+++ b/public/layout/header.html
@@ -1,4 +1,5 @@
 <div class="img"></div>
+<script src="../script/dropdown.js"></script>
 <header>
     <div class="nav-container">
         <div class="info-text">
