--- a/public/style.css
+++ b/public/style.css
@@ -105,14 +105,6 @@ footer p {
     font-size: 1.2rem;
 }
 
-header #particles {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-}
-
 header .nav-group {
     display: flex;
     position: relative;
@@ -435,6 +427,18 @@ header .info-text .scroll::before {
     left: 0;
 }
 
+#bg-grid{
+    position: absolute;
+    width: 100%;
+    height: 36.8rem;
+    background-color: #000000;
+    background-image: url(assets/ooorganize.svg);
+    background-size: 5%;
+    z-index: -1;
+    top: 0;
+    left: 0;
+}
+
 .container {
     display: flex;
     flex-direction: row;
@@ -493,7 +497,8 @@ header .info-text .scroll::before {
 }
 
 .submit-obby {
-    background-color: #131314;
+    background-image: url(assets/transition.svg);
+    background-size: cover;
     display: flex;
     justify-content: center;
 }
@@ -509,6 +514,7 @@ header .info-text .scroll::before {
     color: #e3e3e3;
     margin: 4rem;
     background-color: #1e1f22;
+    border: #e3e3e3 2px solid;
     padding: 20px;
     border-radius: 8px;
     width: 300px;
@@ -533,9 +539,11 @@ header .info-text .scroll::before {
 .form-container textarea {
     padding: 8px;
     margin-top: 5px;
+    color: #e3e3e3;
     margin-bottom: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #050505;
     border-radius: 4px;
+    background-color: #131314;
 }
 
 .form-container textarea {
@@ -559,6 +567,8 @@ header .info-text .scroll::before {
 
 .widget-container {
     margin: 4rem;
+    border: #e3e3e3 2px solid;
+    border-radius: 10px;
 }
 
 .title h1 {
@@ -689,7 +699,6 @@ header .info-text .scroll::before {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: #131314;
     text-align: center;
     height: 40vh;
     color: #e3e3e3;
@@ -705,8 +714,10 @@ header .info-text .scroll::before {
 }
 
 .stats-viewer-container {
-    background-color: #131314;
+    background-color: #0f0f0f;
     display: flex;
+    background-image: url(assets/transition.svg);
+    background-size: cover;
     justify-content: center;
     width: 100%;
 }
@@ -730,6 +741,7 @@ header .info-text .scroll::before {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     color: #e3e3e3;
     height: 40rem;
+    border : #e3e3e3 solid 2px;
 }
 
 .player-list input {
@@ -738,7 +750,8 @@ header .info-text .scroll::before {
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    background-color: #2c2d2e;
+    background-color: #131314;
+    border: 1px solid #050505;
     color: #e3e3e3;
 }
 
@@ -777,9 +790,11 @@ header .info-text .scroll::before {
     padding: 10px;
     background-color: #1e1f22;
     border-radius: 8px;
+    border: #e3e3e3 2px solid;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     color: #e3e3e3;
     height: auto;
+    margin-left: 4rem;
     min-height: 40rem;
     width: 25rem;
     transition: 0.5s ease;
@@ -997,7 +1012,6 @@ header .info-text .scroll::before {
 
 .top-1 {
     padding: 25px;
-    background-color: #131314;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -1013,7 +1027,7 @@ header .info-text .scroll::before {
 .contributors {
     text-align: center;
     color: #e3e3e3;
-    background-color: #131314;
+    background-color: #000000;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1050,7 +1064,7 @@ header .info-text .scroll::before {
 }
 
 .carousel-container {
-    background-color: #131314;
+    background-color: #000000;
     padding: 3rem;
 }
 
