--- a/public/style.css
+++ b/public/style.css
@@ -86,17 +86,18 @@ footer {
     padding-left: calc(50% - 1072px / 2);
     padding-right: calc(50% - 1072px / 2);
     width: 100%;
-    height: 9rem;
-    background-image: url(assets/layered-waves-haikei.svg);
+    height: 15rem;
+    background-color: #151515;
+    background-image: url(assets/footer-waves.svg);
     background-size: cover;
-    background-position-y: 25%;
+    background-position-y: 15%;
     display: flex;
     flex-direction: column;
+    border-top: 1px solid #353535;
     align-items: center;
     justify-content: center;
     z-index: 2;
     color: #e3e3e3;
-    border-top: 1px solid #e3e3e3;
 }
 
 footer p {
@@ -710,10 +711,16 @@ header .info-text .scroll::before {
 .information h1 {
     margin-bottom: 2rem;
     font-size: 2rem;
+    z-index: 1;
 }
 
 .information h2 {
     margin-bottom: 1rem;
+    z-index: 1;
+}
+
+.information p {
+    z-index: 1;
 }
 
 .stats-viewer-container {
@@ -1024,6 +1031,7 @@ header .info-text .scroll::before {
     justify-content: center;
     text-align: center;
     color: #e3e3e3;
+    z-index: 1;
 }
 
 .crown-top-1 {
