--- a/public/style.css
+++ b/public/style.css
@@ -1070,6 +1070,7 @@ header .info-text .scroll::before {
     display: inline-block;
     white-space: nowrap;
     animation: marquee 25s linear infinite;
+    margin-left: 5rem;
 }
 
 @keyframes marquee {
