--- a/public/style.css
+++ b/public/style.css
@@ -1069,7 +1069,6 @@ header .info-text .scroll::before {
     width: 100vw;
     display: flex;
     align-items: center;
-    max-width: 100%;
     height: 6rem;
     overflow: hidden;
     color: #131314;
@@ -1078,11 +1077,18 @@ header .info-text .scroll::before {
     font-weight: bold;
 }
 
+.marquee-inner {
+    gap: 2rem;
+    display: flex;
+    width: max-content;
+    animation: marquee 10s linear infinite;
+    will-change: transform;
+}
+
 .content {
     display: inline-block;
     white-space: nowrap;
     animation: marquee 25s linear infinite;
-    margin-left: 5rem;
 }
 
 @keyframes marquee {
