dashboard added to public, metatags revamp, account

--- a/public/layout/header.html
+++ b/public/layout/header.html
@@ -6,9 +6,9 @@
         </div>
         <div class="nav-group">
             <div class="nav" id="home">
-                <a href="index">
-                    <img src="assets/home.svg" class="flag-icon">
-                    <h3 class="nav-title">Home</h3>
+                <a href="dashboard">
+                    <img src="assets/dashboard.svg" class="flag-icon">
+                    <h3 class="nav-title">Dashboard</h3>
                 </a>
             </div>
             <div class="dropdown">
